5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1712_2502.log
== SUBMITION (2019-05-14 19:06:07) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi=x * 12 ** 1/2
print(round(pi,8))
-- EXECUTION TIME:
0.139341
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
0.0
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:06:19) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi=x * 12 ** 1/2
print(round(pi,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:07:00) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi=x * 12 ** 1/2
print(round(pi,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:07:15) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi=x * 12 ** 1/2
print(round(pi,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:07:27) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
	pi=x * 12 ** 1/2
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(pi,8))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:08:13) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:08:39) 
-- CODE:
n=int(input("termo :"))
t=1
x=0
n=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** n) * si)
	n=n +1
	si=1 * (-1)
pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:09:17) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** nk) * si)
	nk=nk +1
	si=1 * (-1)
pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
-531426.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:09:36) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
while (t < n):
	t= t + 1 
	x=x + ((1 / 1 * 3 ** nk) * si)
	nk=nk +1
	si=1 * (-1)
	pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
-531426.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:10:52) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 1
	nk=nk +1
	si=1 * (-1)
pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
-51059.1525974
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:11:02) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi= (12 ** 1/2) * x
print(round(pi,8))
-- OUTPUT:
-26834.22397664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:11:52) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi= (12 ** 1/2) + x
print(round(pi,8))
-- OUTPUT:
-4466.37066277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:13:56) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	pi= (12 ** 1/2) * x
	nk=nk +1
	si=1 * (-1)

print(round(pi,8))
-- OUTPUT:
-26834.22397664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:14:24) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
pi=12 ** 1/2
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	pi= (12 ** 1/2) * x
	nk=nk +1
	si=1 * (-1)

print(round(pi,8))
-- OUTPUT:
-26834.22397664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:14:38) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
pi=12 ** 1/2
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	pi=pi * x
	nk=nk +1
	si=1 * (-1)

print(round(pi,8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:21) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x
print(round(pi,8))
-- OUTPUT:
-4472.37066277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:52) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
-15492.74643641
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:58) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
-15492.74643641
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:16:11) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / v * 3 ** nk) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- EXECUTION TIME:
0.19484
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
-15492.74643641
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
-891697.92895249
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-826.6211614
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:16:34) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
2.97733077
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:16:38) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
2.97733077
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:16:42) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=1 * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
2.97733077
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:11) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=si * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:21) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=si * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:27) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=si * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:18:42) 
-- CODE:
n=int(input("termo :"))
t=0
x=0
nk=0
si=1
v=1
while (t < n):
	t= t + 1 
	x=x + ((1 / (v * 3 ** nk)) * si)
	v= v + 2
	nk=nk +1
	si=si * (-1)
pi=x * (12**(1/2))
print(round(pi,8))
-- EXECUTION TIME:
0.187637
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
